--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "buefy": "^0.8.2",
     "core-js": "^2.6.5",
     "postman-request": "^2.88.1-postman.16",
+    "shelljs": "^0.8.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
